add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <title> Liam's Lucrative Website </title>
     <style>
-        
         body {
             background: rgb(38, 193, 207);
             color: rgb(45, 45, 45);
@@ -21,6 +20,7 @@
         nav {
             background: rgb(163, 40, 9);
             margin: 0 auto;
+            margin-bottom: 10px;
             display: flex;
             padding: 10px;
         }
@@ -60,6 +60,7 @@
 
         .sidebar-img {
             width: 500px;
+            border-radius: 5;
         }
 
         .content {
@@ -79,7 +80,7 @@
 
         .title {
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            color:rgb(141, 188, 231)
+            color: rgb(141, 188, 231)
         }
     </style>
 </head>
@@ -110,26 +111,27 @@
                 <h3> Liam Christopher </h3>
                 <p> Student at Lusher Charter School</p>
 
+                <!-- Interests Section -->
+                <div id="interests">
+                    <h3> Interests</h3>
+                    <ul>
+
+                        <li>
+                            Sailing
+                        </li>
+
+                        <li>
+                            3d Printing
+                        </li>
+
+                        <li>
+                            Formula 1
+                        </li>
+
+                    </ul>
+                </div>
             </div>
-            <!-- Intrests Section -->
-            <div id="intrests">
-                <h3> Intrests</h3>
-                <ul>
 
-                    <li>
-                        Sailing
-                    </li>
-
-                    <li>
-                        3d Printing
-                    </li>
-
-                    <li>
-                        Formula 1
-                    </li>
-
-                </ul>
-            </div>
         </main>
 
     </div>
