--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -51,8 +51,8 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
-				box.css("left", newPositionX);
+			function moveBoxTo(location) {
+				box.css("left", location);
 			}
 
 			// changes the text displayed on the Box
@@ -66,8 +66,8 @@
 
 			// TODO 2 - Variable declarations 
 			var location = 0;
-			var points = 1;
-			
+			var points = 0;
+			var speed = 10;
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -78,16 +78,16 @@
 				moveBoxTo(location)
 				location = location + 10};
 				
-
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				location = 0
-				changeBoxText(points + 1);
-
+				location = 0;
+				changeBoxText(points);
+				
+points = points + 1
 			};
 		})();
 	</script>
