--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -9,12 +9,12 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: rgb(255, 0, 0);
-			font-size: 300%;
+			background-color: rgb(55, 216, 181);
+			font-size: 200%;
 			text-align: center;
-			display: block;
+			display: circle;
 			position: absolute;
-			top: 100px;
+			top: 350px;
 			left: 0px;
 			/* <--- Change me! */
 		}
@@ -68,7 +68,8 @@
 			var location = 0;
 			var points = 0;
 			var speed = 10;
-
+			var positionY;
+			var speedY;
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
@@ -76,8 +77,14 @@
 			*/
 			function update() {
 				moveBoxTo(location)
-				location = location + 10};
-				
+				location = location + speed
+				if (location > boardWidth) {
+					speed *= -1;
+				}
+				if (location < 0) {
+					speed *= -1;
+				}
+			};
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
@@ -86,8 +93,10 @@
 			function handleBoxClick() {
 				location = 0;
 				changeBoxText(points);
-				
-points = points + 1
+				speed = speed + 3
+
+
+				points = points + 1
 			};
 		})();
 	</script>
